Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33102

Failed to keep the external terminal window open after execution

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 17.0.1
    • Qt Creator 17.0.0
    • Terminal
    • None
    • Manjaro Linux 25.0.3
    • b96b9e5b2 (17.0)

      In qtcreator17, when launching an external terminal to run a C++ program, the terminal automatically closes after execution and cannot keep the terminal window open.

       

       

        1. image-2025-06-20-10-14-41-617.png
          236 kB
        2. image-2025-06-23-14-26-17-458.png
          image-2025-06-23-14-26-17-458.png
          143 kB
        3. konsole.png
          konsole.png
          119 kB
        4. qtcreator16.webp
          1.16 MB
        5. xterm.png
          xterm.png
          118 kB
        For Gerrit Dashboard: QTCREATORBUG-33102
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            weigong hello jolla
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes