RunControl: Fix keeping external terminal window open

Introduce Process::takeProcessInterface(), so that
the internals keeping a handle to the open external window
may be destroyed later, not directly from the Process d'tor.

Amends 9daa8b73eec450817c072da5c1b57ad4a8e855af

Fixes: QTCREATORBUG-33102
Change-Id: Id6f736d093ba34eaa3c249a436ef99ee98eccd68
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>