src/plugins/projectexplorer/runcontrol.cpp
@@ -1474,6 +1474,12 @@ Group processRecipe(RunControl *runControl,
 
     const auto onDone = [runControl](const Process &process) {
         runControl->postMessage(process.exitMessage(), NormalMessageFormat);
+        if (process.usesTerminal()) {
+            Process &mutableProcess = const_cast<Process &>(process);
+            auto processInterface = mutableProcess.takeProcessInterface();
+            if (processInterface)
+                processInterface->setParent(runControl);
+        }
     };
 
     const auto onCancelSetup = [](Barrier &barrier) {
